--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>goit-markup-hw-02</title>
+  <title>goit-markup-hw-04</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com" />
   <link rel="stylesheet" href="https://fonts.gstatic.com" crossorigin />
@@ -20,7 +20,7 @@
         <a href="./index.html" class="logo-link link">Web<span class="logospan">Studio</span></a>
         <ul class="nav-list">
           <li>
-            <a href="./index.html" class="link"> Studio</a>
+            <a href="./index.html" class="link studio"> Studio</a>
           </li>
           <li>
             <a href="" class="link"> Portfolio</a>
@@ -54,6 +54,11 @@
         <h2 class="visually-hidden">Mission</h2>
         <ul class="mission-list">
           <li class="section-two-list">
+            <div class="section-two-icons">
+              <svg width="64" height="64">
+                <use href="./images/icons.svg#icon-antenna-1"></use>
+              </svg>
+            </div>
             <h3 class="header-third">Strategy</h3>
             <p class="text-first">
               Our goal is to identify the business problem to walk away with the
@@ -61,6 +66,11 @@
             </p>
           </li>
           <li class="section-two-list">
+            <div class="section-two-icons">
+              <svg width="64" height="64">
+                <use href="./images/icons.svg#icon-clock-1"></use>
+              </svg>
+            </div>
             <h3 class="header-third">Punctuality</h3>
             <p class="text-first">
               Bring the key message to the brand's audience for the best price
@@ -68,6 +78,11 @@
             </p>
           </li>
           <li class="section-two-list">
+            <div class="section-two-icons">
+              <svg width="64" height="64">
+                <use href="./images/icons.svg#icon-diagram-1"></use>
+              </svg>
+            </div>
             <h3 class="header-third">Diligence</h3>
             <p class="text-first">
               Research and confirm brands that present the strongest digital
@@ -75,6 +90,11 @@
             </p>
           </li>
           <li class="section-two-list">
+            <div class="section-two-icons">
+              <svg width="64" height="64">
+                <use href="./images/icons.svg#icon-Group"></use>
+              </svg>
+            </div>
             <h3 class="header-third">Technologies</h3>
             <p class="text-first">
               Design practice focused on digital experiences. We bring forth a
@@ -93,6 +113,36 @@
             <div class="team-item">
               <h3 class="team-name">Mark Guerrero</h3>
               <p class="team-text">Product Designer</p>
+              <ul class="section-team-social-list">
+                <li class="section-team-social-list-item">
+                  <a href="" class="section-team-socail-link">
+                    <svg width="16" height="16" class="section-team-social-icon">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="section-team-social-list-item">
+                  <a href="" class="section-team-socail-link">
+                    <svg width="16" height="16" class="section-team-social-icon">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="section-team-social-list-item">
+                  <a href="" class="section-team-socail-link">
+                    <svg width="16" height="16" class="section-team-social-icon">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="section-team-social-list-item">
+                  <a href="" class="section-team-socail-link">
+                    <svg width="16" height="16" class="section-team-social-icon">
+                      <use href="./images/icons.svg#icon-linkedln"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </div>
           </li>
           <li class="team-list">
@@ -100,6 +150,36 @@
             <div class="team-item">
               <h3 class="team-name">Tom Ford</h3>
               <p class="team-text">Frontend Developer</p>
+              <ul class="section-team-social-list">
+                <li class="section-team-social-list-item">
+                  <a href="" class="section-team-socail-link">
+                    <svg width="16" height="16" class="section-team-social-icon">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="section-team-social-list-item">
+                  <a href="" class="section-team-socail-link">
+                    <svg width="16" height="16" class="section-team-social-icon">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="section-team-social-list-item">
+                  <a href="" class="section-team-socail-link">
+                    <svg width="16" height="16" class="section-team-social-icon">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="section-team-social-list-item">
+                  <a href="" class="section-team-socail-link">
+                    <svg width="16" height="16" class="section-team-social-icon">
+                      <use href="./images/icons.svg#icon-linkedln"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </div>
           </li>
           <li class="team-list">
@@ -107,6 +187,36 @@
             <div class="team-item">
               <h3 class="team-name">Camila Garcia</h3>
               <p class="team-text">Marketing</p>
+              <ul class="section-team-social-list">
+                <li class="section-team-social-list-item">
+                  <a href="" class="section-team-socail-link">
+                    <svg width="16" height="16" class="section-team-social-icon">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="section-team-social-list-item">
+                  <a href="" class="section-team-socail-link">
+                    <svg width="16" height="16" class="section-team-social-icon">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="section-team-social-list-item">
+                  <a href="" class="section-team-socail-link">
+                    <svg width="16" height="16" class="section-team-social-icon">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="section-team-social-list-item">
+                  <a href="" class="section-team-socail-link">
+                    <svg width="16" height="16" class="section-team-social-icon">
+                      <use href="./images/icons.svg#icon-linkedln"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </div>
           </li>
           <li class="team-list">
@@ -114,6 +224,36 @@
             <div class="team-item">
               <h3 class="team-name">Daniel Wilson</h3>
               <p class="team-text">UI Designer</p>
+              <ul class="section-team-social-list">
+                <li class="section-team-social-list-item">
+                  <a href="" class="section-team-socail-link">
+                    <svg width="16" height="16" class="section-team-social-icon">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="section-team-social-list-item">
+                  <a href="" class="section-team-socail-link">
+                    <svg width="16" height="16" class="section-team-social-icon">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="section-team-social-list-item">
+                  <a href="" class="section-team-socail-link">
+                    <svg width="16" height="16" class="section-team-social-icon">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="section-team-social-list-item">
+                  <a href="" class="section-team-socail-link">
+                    <svg width="16" height="16" class="section-team-social-icon">
+                      <use href="./images/icons.svg#icon-linkedln"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </div>
           </li>
         </ul>
@@ -124,46 +264,84 @@
         <h2 class="portfolio-header">Our Portfolio</h2>
         <ul class="section-portfolio-list">
           <li class="portfolio-list">
-            <img src="./images/banking-app.jpg" width="360" height="300" alt="Banking App" class="portfolio-img-card">
+            <div class="portfolio-img-card"><img src="./images/banking-app.jpg" width="360" height="300"
+                alt="Banking App" class="portfolio-img-card">
+              <div class="overlay">
+                <p>14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                  Calorie Tracker App · Exotic
+                  Fruit Ecommerce App · Cloud Storage App</p>
+              </div>
+            </div>
             <div class="portfolio-item">
               <h3 class="portfolio-name">Banking App</h3>
               <p class="portfolio-text">App</p>
             </div>
           </li>
           <li class="portfolio-list">
-            <img src="./images/cashless-payment.jpg" width="360" height="300" alt="Cashless Payment"
-              class="portfolio-img-card">
+            <div class="portfolio-img-card"><img src="./images/cashless-payment.jpg" width="360" height="300"
+                alt="Cashless Payment" class="portfolio-img-card">
+              <div class="overlay">
+                <p>14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                  Calorie Tracker App · Exotic
+                  Fruit Ecommerce App · Cloud Storage App</p>
+              </div>
+            </div>
             <div class="portfolio-item">
               <h3 class="portfolio-name">Cashless Payment</h3>
               <p class="portfolio-text">Marketing</p>
             </div>
           </li>
           <li class="portfolio-list">
-            <img src="./images/meditation-app.jpg" width="360" height="300" alt="Meditaion App"
-              class="portfolio-img-card">
+            <div class="portfolio-img-card"><img src="./images/meditation-app.jpg" width="360" height="300"
+                alt="Meditaion App" class="portfolio-img-card">
+              <div class="overlay">
+                <p>14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                  Calorie Tracker App · Exotic
+                  Fruit Ecommerce App · Cloud Storage App</p>
+              </div>
+            </div>
             <div class="portfolio-item">
               <h3 class="portfolio-name">Meditation App</h3>
               <p class="portfolio-text">App</p>
             </div>
           </li>
           <li class="portfolio-list">
-            <img src="./images/taxi-service.jpg" width="360" height="300" alt="Taxi Service" class="portfolio-img-card">
+            <div class="portfolio-img-card"><img src="./images/taxi-service.jpg" width="360" height="300"
+                alt="Taxi Service" class="portfolio-img-card">
+              <div class="overlay">
+                <p>14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                  Calorie Tracker App · Exotic
+                  Fruit Ecommerce App · Cloud Storage App</p>
+              </div>
+            </div>
             <div class="portfolio-item">
               <h3 class="portfolio-name">Taxi Service</h3>
               <p class="portfolio-text">Marketing</p>
             </div>
           </li>
           <li class="portfolio-list">
-            <img src="./images/screen-illustration.jpg" width="360" height="300" alt="Screen Illustrations"
-              class="portfolio-img-card">
+            <div class="portfolio-img-card"><img src="./images/screen-illustration.jpg" width="360" height="300"
+                alt="Screen Illustrations" class="portfolio-img-card">
+              <div class="overlay">
+                <p>14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                  Calorie Tracker App · Exotic
+                  Fruit Ecommerce App · Cloud Storage App</p>
+              </div>
+            </div>
             <div class="portfolio-item">
               <h3 class="portfolio-name">Screen Illustrations</h3>
               <p class="portfolio-text">Design</p>
             </div>
           </li>
           <li class="portfolio-list">
-            <img src="./images/online-courses.jpg" width="360" height="300" alt="Online Courses"
-              class="portfolio-img-card">
+            <div class="portfolio-img-card"><img src="./images/online-courses.jpg" width="360" height="300"
+                alt="Online Courses" class="portfolio-img-card">
+              <div class="overlay">
+                <p>14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                  Calorie Tracker App · Exotic
+                  Fruit Ecommerce App · Cloud Storage App</p>
+              </div>
+            </div>
             <div class="portfolio-item">
               <h3 class="portfolio-name">Online Courses</h3>
               <p class="portfolio-text">Marketing</p>
@@ -174,12 +352,47 @@
     </section>
   </main>
   <footer class="footer">
-    <div class="container">
-      <a class="footer-logo footer-link" href="./index.html">Web<span class="footer-studio">Studio</span></a>
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+    <div class="container footer-box">
+      <div class="footer-logo-container">
+        <a class="footer-logo footer-link" href="./index.html">Web<span class="footer-studio">Studio</span></a>
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with digital
+          marketing & growth solutions.
+        </p>
+      </div>
+      <div class="footer-social-container">
+        <p class="footer-social-container-header">Social media</p>
+        <ul class="footer-social-container-list">
+          <li class="footer-social-container-list-item">
+            <a href="" class="footer-social-container-list-link">
+              <svg width="24" height="24" class="footer-social-container-list-icon">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-social-container-list-item">
+            <a href="" class="footer-social-container-list-link">
+              <svg width="24" height="24" class="footer-social-container-list-icon">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-social-container-list-item">
+            <a href="" class="footer-social-container-list-link">
+              <svg width="24" height="24" class="footer-social-container-list-icon">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-social-container-list-item">
+            <a href="" class="footer-social-container-list-link">
+              <svg width="24" height="24" class="footer-social-container-list-icon">
+                <use href="./images/icons.svg#icon-linkedln"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
     </div>
   </footer>
 </body>
