--- a/index.html
+++ b/index.html
@@ -265,12 +265,10 @@
         <ul class="section-portfolio-list">
           <li class="portfolio-list">
             <div class="portfolio-img-card"><img src="./images/banking-app.jpg" width="360" height="300"
-                alt="Banking App" class="portfolio-img-card">
-              <div class="overlay">
-                <p>14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
-                  Calorie Tracker App · Exotic
-                  Fruit Ecommerce App · Cloud Storage App</p>
-              </div>
+                alt="Banking App" class="portfolio-img-card-list">
+              <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                Calorie Tracker App · Exotic
+                Fruit Ecommerce App · Cloud Storage App</p>
             </div>
             <div class="portfolio-item">
               <h3 class="portfolio-name">Banking App</h3>
@@ -279,12 +277,10 @@
           </li>
           <li class="portfolio-list">
             <div class="portfolio-img-card"><img src="./images/cashless-payment.jpg" width="360" height="300"
-                alt="Cashless Payment" class="portfolio-img-card">
-              <div class="overlay">
-                <p>14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
-                  Calorie Tracker App · Exotic
-                  Fruit Ecommerce App · Cloud Storage App</p>
-              </div>
+                alt="Cashless Payment" class="portfolio-img-card-list">
+              <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                Calorie Tracker App · Exotic
+                Fruit Ecommerce App · Cloud Storage App</p>
             </div>
             <div class="portfolio-item">
               <h3 class="portfolio-name">Cashless Payment</h3>
@@ -293,12 +289,10 @@
           </li>
           <li class="portfolio-list">
             <div class="portfolio-img-card"><img src="./images/meditation-app.jpg" width="360" height="300"
-                alt="Meditaion App" class="portfolio-img-card">
-              <div class="overlay">
-                <p>14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
-                  Calorie Tracker App · Exotic
-                  Fruit Ecommerce App · Cloud Storage App</p>
-              </div>
+                alt="Meditaion App" class="portfolio-img-card-list">
+              <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                Calorie Tracker App · Exotic
+                Fruit Ecommerce App · Cloud Storage App</p>
             </div>
             <div class="portfolio-item">
               <h3 class="portfolio-name">Meditation App</h3>
@@ -307,12 +301,10 @@
           </li>
           <li class="portfolio-list">
             <div class="portfolio-img-card"><img src="./images/taxi-service.jpg" width="360" height="300"
-                alt="Taxi Service" class="portfolio-img-card">
-              <div class="overlay">
-                <p>14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
-                  Calorie Tracker App · Exotic
-                  Fruit Ecommerce App · Cloud Storage App</p>
-              </div>
+                alt="Taxi Service" class="portfolio-img-card-list">
+              <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                Calorie Tracker App · Exotic
+                Fruit Ecommerce App · Cloud Storage App</p>
             </div>
             <div class="portfolio-item">
               <h3 class="portfolio-name">Taxi Service</h3>
@@ -321,12 +313,10 @@
           </li>
           <li class="portfolio-list">
             <div class="portfolio-img-card"><img src="./images/screen-illustration.jpg" width="360" height="300"
-                alt="Screen Illustrations" class="portfolio-img-card">
-              <div class="overlay">
-                <p>14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
-                  Calorie Tracker App · Exotic
-                  Fruit Ecommerce App · Cloud Storage App</p>
-              </div>
+                alt="Screen Illustrations" class="portfolio-img-card-list">
+              <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                Calorie Tracker App · Exotic
+                Fruit Ecommerce App · Cloud Storage App</p>
             </div>
             <div class="portfolio-item">
               <h3 class="portfolio-name">Screen Illustrations</h3>
@@ -335,12 +325,10 @@
           </li>
           <li class="portfolio-list">
             <div class="portfolio-img-card"><img src="./images/online-courses.jpg" width="360" height="300"
-                alt="Online Courses" class="portfolio-img-card">
-              <div class="overlay">
-                <p>14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
-                  Calorie Tracker App · Exotic
-                  Fruit Ecommerce App · Cloud Storage App</p>
-              </div>
+                alt="Online Courses" class="portfolio-img-card-list">
+              <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                Calorie Tracker App · Exotic
+                Fruit Ecommerce App · Cloud Storage App</p>
             </div>
             <div class="portfolio-item">
               <h3 class="portfolio-name">Online Courses</h3>
