--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
       </div>
     </section>
     <section class="section-portfolio">
-      <div class="container container-portfolio">
+      <div class="container">
         <h2 class="portfolio-header">Our Portfolio</h2>
         <ul class="section-portfolio-list">
           <li class="portfolio-list">
